Step-005/terraform-exercise/rds.tf
resource "aws_db_subnet_group" "indacloud_subnet_group" {
}

resource "aws_db_instance" "indacloud_rds" {
}
